Update zhangxin java core concurrent.